--- a/WebApp/templates/index.html
+++ b/WebApp/templates/index.html
@@ -77,7 +77,7 @@
                     
                     $.ajax({
                     type:'GET',
-                    url:'http://127.0.0.1:5000',
+                    url:'/',
                     success: function(response){
                     window.location.href="{{url_for('signup')}}"
         
@@ -89,7 +89,7 @@
                     
                     $.ajax({
                     type:'GET',
-                    url:'http://127.0.0.1:5000',
+                    url:'/',
                     success: function(response){
                     window.location.href="{{url_for('login')}}"
         
